--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 		<button type="button" class="form__button"><i class="fa fa-search form__icon"></i></button>
 	</form>
 	<div class="message"></div>
-	<div class="container">
-		<video class="video dziala" src=""></video>
-	</div>
+	<div class="container"></div>
+	
 	<script src="index.js"></script>
 </body>
 </html>
